--- a/blog/templates/blog/includes/post_dates.html
+++ b/blog/templates/blog/includes/post_dates.html
@@ -1,4 +1,4 @@
-<p class="mb-auto text-small text-muted">
+<p class="mb-auto text-small text-white-50">
   {% if not post.pub_date %}
     {{ post.created_date|date:'l, d F Y H:i:s' }}
   {% else %}
