--- a/blog/templates/blog/lists/post_list.html
+++ b/blog/templates/blog/lists/post_list.html
@@ -75,7 +75,7 @@
     {% endif %}
 
     {% block page_top_hr %}
-      <div class='text-then-hr text-small text-muted'>
+      <div class='text-then-hr text-small text-white-50'>
         <span class='hr-title'><span class="me-2">{{ posts.count }}
             Post{{ posts.count|pluralize:'s' }}</span></span>
       </div>
