--- a/blog/templates/blog/lists/series_list.html
+++ b/blog/templates/blog/lists/series_list.html
@@ -11,7 +11,7 @@
             <div class="card-header">
               <div class="d-flex">
                 <span class="col">
-                  <strong class="text-muted">Series #{{ series.id }}</strong>
+                  <strong class="text-white-50">Series #{{ series.id }}</strong>
                 </span>
                 {% if user.is_superuser %}
                   <span class="col-auto">
