--- a/blog/templates/blog/lists/tag_list.html
+++ b/blog/templates/blog/lists/tag_list.html
@@ -14,7 +14,7 @@
             <header class="card-header">
               <span class="d-flex">
                 <span class="col">
-                  <strong class="text-muted">Tag #{{ tag.id }}</strong>
+                  <strong class="text-white-50">Tag #{{ tag.id }}</strong>
                 </span>
                 <span class="col-auto">
                   {% if user.is_superuser %}
