--- a/blog/templates/blog/search.html
+++ b/blog/templates/blog/search.html
@@ -13,8 +13,8 @@
                 <div class="card-header">
                   <div class="d-flex">
                     <span class="col">
-                      <p class="mb-0 text-muted">#{{ e.id }}</p>
-                      <p class="mb-0 text-muted">{{ e.author }}</p>
+                      <p class="mb-0 text-white-50">#{{ e.id }}</p>
+                      <p class="mb-0 text-white-50">{{ e.author }}</p>
                     </span>
                     {% if user.is_superuser %}
                       <span class="col-auto">
@@ -43,10 +43,10 @@
               <div class="card-header">
                 <span class="d-flex">
                   <span class="col">
-                    <p class="mb-0 text-muted">#{{ element.id }}</p>
+                    <p class="mb-0 text-white-50">#{{ element.id }}</p>
                   </span>
                   <span class="col">
-                    <p class="mb-0 text-muted">{{ element.author }}</p>
+                    <p class="mb-0 text-white-50">{{ element.author }}</p>
                   </span>
                 </span>
               </div>
@@ -72,10 +72,10 @@
             <div class="card-header">
               <span class="d-flex">
                 <span class="col">
-                  <p class="mb-0 text-muted">#{{ element.id }}</p>
+                  <p class="mb-0 text-white-50">#{{ element.id }}</p>
                 </span>
                 <span class="col">
-                  <p class="mb-0 text-muted">{{ element.author }}</p>
+                  <p class="mb-0 text-white-50">{{ element.author }}</p>
                 </span>
               </span>
             </div>
