--- a/khoBlog/templates/extras/form_field_extra.html
+++ b/khoBlog/templates/extras/form_field_extra.html
@@ -27,7 +27,7 @@
 {% endif %}
 
 {% if field.help_text %}
-  <span class="text-small text-muted">{{ field.help_text }}</span>
+  <span class="text-small text-white-50">{{ field.help_text }}</span>
 {% endif %}
 
 {% for error in field.errors %}
