--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -14,8 +14,8 @@
             <div class="card-header">
               <span class="d-flex">
                 <span class="col">
-                  <strong class="text-muted">Page #{{ page.id }}</strong>
-                  <p class="mb-0 text-small text-muted">Page slug:
+                  <strong class="text-white-50">Page #{{ page.id }}</strong>
+                  <p class="mb-0 text-small text-white-50">Page slug:
                     {{ page.slug }}</p>
                 </span>
                 <span class="col-auto">
