--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -10,7 +10,7 @@
   <ul class="list-unstyled">
     {% for task in tasks %}
       <li class="clearfix">
-        <span class="{% if task.complete %} text-muted{% endif %}">
+        <span class="{% if task.complete %} text-white-50{% endif %}">
           <i class="bi bi-check2-square"></i>
           Task #{{ task.id }}
           -
