--- a/blog/templates/blog/base_post.html
+++ b/blog/templates/blog/base_post.html
@@ -1,7 +1,7 @@
 {% extends 'sub_base_main_block.html' %}
 
 {% block page_top_archive %}
-  <div class="text-small text-muted col">
+  <div class="text-small text-white-50 col">
     <span>
       <a href="{% url 'blog:post_archive' %}">Archive</a>
       by
