--- a/blog/templates/blog/base_post_card.html
+++ b/blog/templates/blog/base_post_card.html
@@ -33,7 +33,7 @@
               <a class="cat-link" href="{{ object.categories.first.get_absolute_url }}">{{ object.categories.first|capfirst }}</a>
             </strong>
           {% endif %}
-          <p class="mb-0 text-small text-muted">
+          <p class="mb-0 text-small text-white-50">
             Post #{{ object.id }}
           </p>
         </span>
@@ -59,14 +59,14 @@
         {% if object.series %}
           <article class="card shadow">
             <header class="card-header">
-              <strong>Series:
+              <strong class="text-white-50">Series:
                 <a class="card-link" href="{% url 'blog:post_series_list' slug=object.series.slug %}">{{ object.series }}</a>
               </strong>
               {% if object.series.description %}
                 -
                 {{ object.series.description }}
               {% endif %}
-              <span class="text-small text-muted">
+              <span class="text-small text-white-50">
                 ({{ context.series.all.count }}
                 Part series)
               </span>
@@ -81,7 +81,7 @@
                         <span class="fst-italic text-small">(You are here)</span>
                       {% endif %}
                       {% if e.is_scheduled %}
-                        <span class="text-muted fst-italic">
+                        <span class="text-white-50 fst-italic">
                           (Coming:
                           {{ e.pub_date|date:'l, d F Y H:i:s' }})
                         </span>
@@ -91,10 +91,10 @@
                     <span>Part #{{ forloop.counter }}:
                       {{ e }}
                       {% if e == object %}
-                        <span class="text-muted">(You are here)</span>
+                        <span class="text-white-50">(You are here)</span>
                       {% endif %}
                       {% if e.is_scheduled %}
-                        <span class="text-muted fst-italic">
+                        <span class="text-white-50 fst-italic">
                           (Coming:
                           {{ e.pub_date|date:'l, d F Y H:i:s' }})
                         </span>
@@ -114,18 +114,29 @@
         <h3 class="card-title text-word-wrap mb-0">{{ object.title|truncatewords_html:7 }}</h3>
       {% endif %}
 
-      <section>
-        <p class="mb-auto text-small text-muted">
-          {% if not object.pub_date %}
+      <section class="text-small text-white-50">
+        {% if not object.pub_date %}
+          <p class="mb-auto">
+            Created:
             {{ object.created_date|date:'l, d F Y H:i:s' }}
-          {% else %}
+          </p>
+        {% else %}
+          <p class="mb-auto">
+            Created:
+            {{ object.created_date|date:'l, d F Y H:i:s' }}
+          </p>
+          <p class="mb-auto">
+            Published:
             {{ object.pub_date|date:'l, d F Y H:i:s' }}
-          {% endif %}
-          by
-          {{ object.author }}
-        </p>
+          </p>
+        {% endif %}
+        {% if object.mod_date %}
+          <p class="mb-auto">
+            Updated:
+            {{ object.mod_date|date:'l, d F Y H:i:s' }}</p>
+        {% endif %}
 
-        <p class="mb-0 text-small text-muted">
+        <p class="mb-auto">
           {% if object.body %}
             {{ object.body|readtime }}
           {% else %}
@@ -161,13 +172,76 @@
   {% endblock card_body %}
 
   {% block card_footer %}
-    {% if object.url_to_article and not in_list %}
-      <footer class="card-footer">
-        Direct link:
-        <a class="card-link" href="{{ object.url_to_article }}">{% firstof object.url_to_article_title object.url_to_article %}</a>
-      </footer>
-    {% elif in_list %}
-      <footer class="card-footer">
+    <footer class="card-footer">
+      {% if not in_list %}
+        <section class="h5">
+          Post information
+        </section>
+        {% if object.url_to_article and not in_list %}
+          <span class="text-white-50">
+            Direct link:
+          </span>
+          <a class="card-link" href="{{ object.url_to_article }}">{% firstof object.url_to_article_title object.url_to_article %}</a>
+
+          <hr>
+        {% endif %}
+
+        <p class="col-12 col-lg-6">
+          <span class="text-white-50">
+            Seen:
+          </span>
+          {{ object.clicks }} time{{ object.clicks|pluralize:'s' }}
+        </p>
+
+        {% if object.get_tags and not user.is_superuser or object.get_admin_tags and user.is_superuser %}
+          <p class="col-12 col-lg-6">
+            <span class="text-white-50">
+              Tags:
+            </span>
+            {% if not user.is_superuser %}
+              {% for tag in object.get_tags %}
+                {% spaceless %}
+                  <a href="{% url 'blog:post_tagged_with' slug=tag.slug %}">{{ tag }}</a>
+                  {% if not forloop.last %}
+                    <span>,</span>
+                  {% endif %}
+                {% endspaceless %}
+              {% endfor %}
+            {% else %}
+              {% for tag in object.get_admin_tags %}
+                {% spaceless %}
+                  <a href="{% url 'blog:post_tagged_with' slug=tag.slug %}">{{ tag }}</a>
+                  {% if not forloop.last %}
+                    <span>,</span>
+                  {% endif %}
+                {% endspaceless %}
+              {% endfor %}
+            {% endif %}
+          </p>
+
+          <p class="col-12 col-lg-6">
+            <span class="text-white-50">
+              Related content:
+            </span>
+            {% for e in context.similar_posts %}
+              {% if not e.withdrawn and not e.is_scheduled or user.is_superuser %}
+                {% spaceless %}
+                  <a href="{{ e.get_absolute_url }}">{{ e }}</a>
+                  {% if not forloop.last %}
+                    <span>,</span>{% endif %}
+                {% endspaceless %}
+              {% endif %}
+            {% endfor %}
+          </p>
+        {% endif %}
+        <p class="col-12 col-lg-6">
+          <span class="text-white-50">
+            Categories:
+          </span>
+          {% comment %} {% endcomment %}
+          {% include 'blog/includes/post_categories.html' with post=object %}
+        </p>
+      {% elif in_list %}
         <span class="d-flex">
           <span class="col">
             {% if not context.archive %}
@@ -189,7 +263,7 @@
             <a role="button" class="float-end card-link" data-bs-toggle="offcanvas" data-bs-target="#postOffCanvas-{{ object.slug }}" aria-controls="postOffCanvas-{{ object.slug }}">Post info</a>
           </span>
         </span>
-      </footer>
-    {% endif %}
+      {% endif %}
+    </footer>
   {% endblock card_footer %}
 </article>
