--- a/blog/templates/blog/post_card_in_lists.html
+++ b/blog/templates/blog/post_card_in_lists.html
@@ -9,7 +9,7 @@
     <section class="card-body">
       <h3 class="card-title text-word-wrap mb-0">{{ post.title|truncatewords_html:7 }}</h3>
       <section>{% include 'blog/includes/post_dates.html' %}</section>
-      <p class="mb-0 text-small text-muted">
+      <p class="mb-0 text-small text-white-50">
         {% if post.body %}
           {{ post.body|readtime }}
         {% else %}
