--- a/khoBlog/templates/django_comments_xtd/comment_tree.html
+++ b/khoBlog/templates/django_comments_xtd/comment_tree.html
@@ -14,12 +14,12 @@
           {% elif item.comment.alias_user or item.comment.user and item.comment.alias_user %}
             {% if user.is_superuser %}
               <a href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
-              <span class="text-small text-muted">{{ item.comment.alias_user }}</span>
+              <span class="text-small text-white-50">{{ item.comment.alias_user }}</span>
             {% else %}
               {% if not item.comment.is_removed %}
                 {{ item.comment.alias_user }}
               {% else %}
-                <span class="text-muted">This comment has been removed.</span>
+                <span class="text-white-50">This comment has been removed.</span>
               {% endif %}
             {% endif %}
           {% else %}
@@ -65,11 +65,11 @@
         </h6>
         {% if item.comment.is_removed %}
           {% if not user.is_superuser %}
-            <p class="text-muted{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
+            <p class="text-white-50{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
               <em>This comment has been removed.</em>
             </p>
           {% else %}
-            <div class="content text-muted{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
+            <div class="content text-white-50{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
               <em>
                 {% if item.comment.title %}
                   <h4>{{ item.comment.title }}</h4>
@@ -93,7 +93,7 @@
             {% include "includes/django_comments_xtd/user_feedback.html" %}
           {% endif %}
           {% if item.comment.allow_thread and not item.comment.is_removed %}
-            {% if allow_feedback %}&nbsp;&nbsp;<span class="text-muted">&bull;</span>&nbsp;&nbsp;{% endif %}
+            {% if allow_feedback %}&nbsp;&nbsp;<span class="text-white-50">&bull;</span>&nbsp;&nbsp;{% endif %}
             <a class="small mutedlink" href="{{ item.comment.get_reply_url }}">{% trans "Reply" %}</a>
           {% endif %}
         {% endif %}
