--- a/portfolio/templates/portfolio/project_list.html
+++ b/portfolio/templates/portfolio/project_list.html
@@ -17,7 +17,7 @@
     {% endfor %}
 
     {% block page_top_hr %}
-      <div class='text-then-hr text-small text-muted'>
+      <div class='text-then-hr text-small text-white-50'>
         <span class='hr-title'><span class="me-2">{{ projects.count }}
             Project{{ projects.count|pluralize:'s' }}</span></span>
       </div>
@@ -31,8 +31,8 @@
             <div class="card-header">
               <span class="d-flex">
                 <span class="col">
-                  <strong class="text-muted">Project #{{ project.id }}</strong>
-                  <p class="mb-0 text-small text-muted">Project slug:
+                  <strong class="text-white-50">Project #{{ project.id }}</strong>
+                  <p class="mb-0 text-small text-white-50">Project slug:
                     {{ project.slug }}</p>
                 </span>
                 <span class="col-auto">
