--- a/khoBlog/templates/django_comments_xtd/comment_tree.html
+++ b/khoBlog/templates/django_comments_xtd/comment_tree.html
@@ -3,105 +3,185 @@
 {% load comments_xtd %}
 
 {% for item in comments %}
-  <div id="comment-{{ item.comment.id }}" class="card shadow mb-2 pb-0 pe-0">
-    <div class="card-body">
-      <div class="comment pb-2">
-        <h4>
-          {% if not item.comment.user and not item.comment.alias_user and item.comment.user_name %}
-            {% if not item.comment.is_removed or user.is_superuser %}
-              <span>{{ item.comment.user_name }}</span>
-            {% endif %}
-          {% elif item.comment.alias_user or item.comment.user and item.comment.alias_user %}
-            {% if user.is_superuser %}
-              <a href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
-              <span class="text-small text-muted">{{ item.comment.alias_user }}</span>
-            {% else %}
-              {% if not item.comment.is_removed %}
-                {{ item.comment.alias_user }}
+  {% if not enable_tailwind_flag and user.is_authenticated and not user.enable_tailwind or not enable_tailwind_flag and not user.is_authenticated %}
+    <div id="comment-{{ item.comment.id }}" class="card shadow mb-2 pb-0 pe-0">
+      <div class="card-body">
+        <div class="comment pb-2">
+          <h4>
+            {% if not item.comment.user and not item.comment.alias_user and item.comment.user_name %}
+              {% if not item.comment.is_removed or user.is_superuser %}
+                <span>{{ item.comment.user_name }}</span>
+              {% endif %}
+            {% elif item.comment.alias_user or item.comment.user and item.comment.alias_user %}
+              {% if user.is_superuser %}
+                <a href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
+                <span class="text-small text-muted">{{ item.comment.alias_user }}</span>
               {% else %}
-                <span class="text-muted">This comment has been removed.</span>
+                {% if not item.comment.is_removed %}
+                  {{ item.comment.alias_user }}
+                {% else %}
+                  <span class="text-muted">This comment has been removed.</span>
+                {% endif %}
               {% endif %}
-            {% endif %}
-          {% else %}
-            {% if user.is_superuser or user.id == item.comment.user.id %}
-              <a href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
-            {% elif item.comment.user.owner and user.is_authenticated %}
-              <a href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
             {% else %}
-              <span>{{ item.comment.user }}</span>
-            {% endif %}
-          {% endif %}
-          {% comment %} {% endcomment %}
-          {% if item.comment.user and item.comment.user|has_permission:"django_comments.can_moderate" %}&nbsp;<span class="badge bg-secondary p-1">Moderator</span>{% endif %}
-        </h4>
-        <h6 class="text-small d-flex">
-          {% spaceless %}
-            <div class="me-auto">{{ item.comment.submit_date|date:'l, d F Y' }}&nbsp;<a href="{% get_comment_permalink item.comment %}">
-                <i class="bi bi-link-45deg"></i>
-                Permalink</a>
-            </div>
-          {% endspaceless %}
-          <span>
-            {% if not item.comment.is_removed %}
-              {% if perms.comments.can_moderate %}
-                {% if item.flagged_count %}
-                  <span class="badge bg-danger" title="{% blocktrans count counter=item.flagged_count %}A user has flagged this comment as inappropriate.{% plural %}{{ counter }} users have flagged this comment as inappropriate.{% endblocktrans %}">{{ item.flagged_count }}</span>
-                {% endif %}
-              {% endif %}
-              {% if allow_flagging and item.flagged %}
-                <i class="bi bi-flag-fill text-danger" title="{% trans 'comment flagged' %}"></i>
-              {% elif allow_flagging %}
-                <a class="mutedlink" href="{% url 'comments-flag' item.comment.pk %}">
-                  <i class="bi bi-flag-fill"></i>
-                </a>
-              {% endif %}
-              {% if perms.comments.can_moderate %}
-                <a class="mutedlink" href="{% url 'comments-delete' item.comment.pk %}">
-                  <i class="bi bi-trash"></i>
-                </a>
+              {% if user.is_superuser or user.id == item.comment.user.id %}
+                <a href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
+              {% elif item.comment.user.owner and user.is_authenticated %}
+                <a href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
+              {% else %}
+                <span>{{ item.comment.user }}</span>
               {% endif %}
             {% endif %}
-          </span>
-        </h6>
-        {% if item.comment.is_removed %}
-          {% if not user.is_superuser %}
-            <p class="text-muted{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
-              <em>This comment has been removed.</em>
-            </p>
-          {% else %}
-            <div class="content text-muted{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
-              <em>
-                {% if item.comment.title %}
-                  <h4>{{ item.comment.title }}</h4>
-                {% endif %}
-
-                {% comment %} {% endcomment %}
-                {% include "includes/django_comments_xtd/comment_content.html" with content=item.comment.comment %}
-              </em>
-            </div>
-          {% endif %}
-        {% else %}
-          <div class="content{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
-            {% if item.comment.title %}
-              <h4>{{ item.comment.title }}</h4>
-            {% endif %}
-
             {% comment %} {% endcomment %}
-            {% include "includes/django_comments_xtd/comment_content.html" with content=item.comment.comment %}
-          </div>
-          {% if allow_feedback %}
-            {% include "includes/django_comments_xtd/user_feedback.html" %}
+            {% if item.comment.user and item.comment.user|has_permission:"django_comments.can_moderate" %}&nbsp;<span class="badge bg-secondary p-1">Moderator</span>{% endif %}
+          </h4>
+          <h6 class="text-small d-flex">
+            {% spaceless %}
+              <div class="me-auto">{{ item.comment.submit_date|date:'l, d F Y' }}&nbsp;<a href="{% get_comment_permalink item.comment %}">
+                  <i class="bi bi-link-45deg"></i>
+                  Permalink</a>
+              </div>
+            {% endspaceless %}
+            <span>
+              {% if not item.comment.is_removed %}
+                {% if perms.comments.can_moderate %}
+                  {% if item.flagged_count %}
+                    <span class="badge bg-danger" title="{% blocktrans count counter=item.flagged_count %}A user has flagged this comment as inappropriate.{% plural %}{{ counter }} users have flagged this comment as inappropriate.{% endblocktrans %}">{{ item.flagged_count }}</span>
+                  {% endif %}
+                {% endif %}
+                {% if allow_flagging and item.flagged %}
+                  <i class="bi bi-flag-fill text-danger" title="{% trans 'comment flagged' %}"></i>
+                {% elif allow_flagging %}
+                  <a class="mutedlink" href="{% url 'comments-flag' item.comment.pk %}">
+                    <i class="bi bi-flag-fill"></i>
+                  </a>
+                {% endif %}
+                {% if perms.comments.can_moderate %}
+                  <a class="mutedlink" href="{% url 'comments-delete' item.comment.pk %}">
+                    <i class="bi bi-trash"></i>
+                  </a>
+                {% endif %}
+              {% endif %}
+            </span>
+          </h6>
+          {% if item.comment.is_removed %}
+            {% if not user.is_superuser %}
+              <p class="text-muted{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
+                <em>This comment has been removed.</em>
+              </p>
+            {% else %}
+              <div class="content text-muted{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
+                <em>
+                  {% if item.comment.title %}
+                    <h4>{{ item.comment.title }}</h4>
+                  {% endif %}
+
+                  {% comment %} {% endcomment %}
+                  {% include "includes/django_comments_xtd/comment_content.html" with content=item.comment.comment %}
+                </em>
+              </div>
+            {% endif %}
+          {% else %}
+            <div class="content{% if not allow_feedback and not item.comment.allow_thread %} pb-2{% endif %}">
+              {% if item.comment.title %}
+                <h4>{{ item.comment.title }}</h4>
+              {% endif %}
+
+              {% comment %} {% endcomment %}
+              {% include "includes/django_comments_xtd/comment_content.html" with content=item.comment.comment %}
+            </div>
+            {% if allow_feedback %}
+              {% include "includes/django_comments_xtd/user_feedback.html" %}
+            {% endif %}
+            {% if item.comment.allow_thread and not item.comment.is_removed %}
+              {% if allow_feedback %}&nbsp;&nbsp;<span class="text-muted">&bull;</span>&nbsp;&nbsp;{% endif %}
+              <a class="small mutedlink" href="{{ item.comment.get_reply_url }}">{% trans "Reply" %}</a>
+            {% endif %}
           {% endif %}
-          {% if item.comment.allow_thread and not item.comment.is_removed %}
-            {% if allow_feedback %}&nbsp;&nbsp;<span class="text-muted">&bull;</span>&nbsp;&nbsp;{% endif %}
-            <a class="small mutedlink" href="{{ item.comment.get_reply_url }}">{% trans "Reply" %}</a>
-          {% endif %}
+        </div>
+        {% if not item.comment.is_removed and item.children %}
+          {% comment %} {% endcomment %}
+          {% render_xtdcomment_tree with comments=item.children %}
         {% endif %}
       </div>
-      {% if not item.comment.is_removed and item.children %}
-        {% comment %} {% endcomment %}
-        {% render_xtdcomment_tree with comments=item.children %}
-      {% endif %}
     </div>
-  </div>
+  {% elif enable_tailwind_flag or user.is_authenticated and user.enable_tailwind %}
+    <article id="comment-{{ item.comment.id }}" class="p-6 ">
+      <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
+        <section class="p-6">
+            {% if not item.comment.user and not item.comment.alias_user and item.comment.user_name %}
+              {% if not item.comment.is_removed or user.is_superuser %}
+                <h1 class="text-lg font-medium text-white">{{ item.comment.user_name }}</h1>
+              {% endif %}
+            {% elif item.comment.alias_user or item.comment.user and item.comment.alias_user %}
+              {% if user.is_superuser %}
+                <a class="text-lg font-medium text-white hover:underline" href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
+                <span class="text-sm text-muted">{{ item.comment.alias_user }}</span>
+              {% else %}
+                {% if not item.comment.is_removed %}
+                  {{ item.comment.alias_user }}
+                {% else %}
+                  <span class="text-muted">This comment has been removed.</span>
+                {% endif %}
+              {% endif %}
+            {% else %}
+              {% if user.is_superuser or user.id == item.comment.user.id %}
+                <a class="text-lg font-medium text-white hover:underline" href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
+              {% elif item.comment.user.owner and user.is_authenticated %}
+                <a class="text-lg font-medium text-white hover:underline" href="{{ item.comment.user.get_absolute_url }}">{{ item.comment.user }}</a>
+              {% else %}
+                <span class="text-lg font-medium text-white">{{ item.comment.user }}</span>
+              {% endif %}
+            {% endif %}
+            {% comment %} {% endcomment %}
+            {% if item.comment.user and item.comment.user|has_permission:"django_comments.can_moderate" %}&nbsp;<span class="badge bg-secondary p-1">Moderator</span>{% endif %}
+          </h4>
+          <h6 class="text-sm flex">
+            {% spaceless %}
+              <div class="mr-auto">{{ item.comment.submit_date|date:'l, d F Y' }}
+                <a href="{% get_comment_permalink item.comment %}">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 inline-flex" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+                  </svg> Permalink
+                </a>
+              </div>
+            {% endspaceless %}
+            <span>
+              {% if not item.comment.is_removed %}
+                {% if perms.comments.can_moderate %}
+                  {% if item.flagged_count %}
+                    <span class="inline-flex items-center justify-center pl-0.5 pr-1 font-bold leading-none text-indigo-100 bg-red-600 rounded"title="{% blocktrans count counter=item.flagged_count %}A user has flagged this comment as inappropriate.{% plural %}{{ counter }} users have flagged this comment as inappropriate.{% endblocktrans %}">{{ item.flagged_count }}</span>
+                  {% endif %}
+                {% endif %}
+                {% if allow_flagging and item.flagged %}
+                  <span title="{% trans 'comment flagged' %}" class="inline-flex items-center justify-center pl-0.5 pr-1 leading-none">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 20 20" fill="red">
+                      <path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd" />
+                    </svg>
+                  </span>
+                {% elif allow_flagging %}
+                  <a class="mutedlink" href="{% url 'comments-flag' item.comment.pk %}">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" viewBox="0 0 20 20" fill="currentColor">
+                      <path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd" />
+                    </svg>
+                  </a>
+                {% endif %}
+                {% if perms.comments.can_moderate %}
+                  <a class="mutedlink" href="{% url 'comments-delete' item.comment.pk %}">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+                    </svg>
+                  </a>
+                {% endif %}
+              {% endif %}
+            </span>
+          </h6>
+        </section>
+        {% if not item.comment.is_removed and item.children %}
+          {% comment %} {% endcomment %}
+          {% render_xtdcomment_tree with comments=item.children %}
+        {% endif %}
+      </div>
+    </article>
+  {% endif %}
 {% endfor %}
