--- a/blog/templates/blog/base_post.html
+++ b/blog/templates/blog/base_post.html
@@ -3,7 +3,7 @@
 {% block page_top_archive %}
   <div class="text-small text-white-50 col">
     <span>
-      <a href="{% url 'blog:post_archive' %}">Archive</a>
+      <a href="{% url 'blog:post_archive' %}">Archives</a>
       by
       <a href="{% url 'blog:archive_year' year=now|date:'Y' %}">Year</a>
       -
