--- a/khoBlog/templates/tailwind/cards.html
+++ b/khoBlog/templates/tailwind/cards.html
@@ -1,4 +1,4 @@
-{% load featured_post offcanvas comments %}
+{% load featured_post comments %}
 
 <article class="p-2 w-full md:w-1/3">
   <div class="h-full border-2 border-gray-800 rounded-lg overflow-hidden">
